[project]
name = "tepub"
version = "0.2.2"
description = "TEPUB - Tools for EPUB: A comprehensive toolkit for EPUB processing including translation, audiobook generation, and export"
requires-python = ">=3.10"
authors = [
  { name = "Xiaolai Li", email = "xiaolaidev@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["epub", "translation", "audiobook", "tts", "ebook", "nlp", "i18n"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: XML",
  "Topic :: Utilities",
]

dependencies = [
  "Pillow>=10.2",
  "cjk-text-formatter>=1.1.0",
  "click>=8.1",
  "ebooklib>=0.18",
  "edge-tts>=6.1",
  "langdetect>=1.0.9",
  "lxml>=5.0",
  "mutagen>=1.47",
  "nltk>=3.9",
  "openai>=1.0",
  "portalocker>=3.0",
  "pydantic>=2.6",
  "pydub>=0.25",
  "requests>=2.31",
  "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/xiaolai/tepub"
Repository = "https://github.com/xiaolai/tepub"
Issues = "https://github.com/xiaolai/tepub/issues"
Changelog = "https://github.com/xiaolai/tepub/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "black>=24.4",
]

[project.scripts]
tepub = "cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
py-modules = ["exceptions", "console_singleton"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
web_templates = ["index.html", "assets/css/*.css", "assets/js/*.js"]

[build-system]
requires = ["setuptools>=61,<69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=cli --cov=epub_io --cov=extraction --cov=translation --cov=injection --cov=state --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "N"]
ignore = ["E203"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = [
  "tests/*",
]
